# Fiducial_marker_testbench

./: CMakeLists.txt  README.md
app/: camera_calibration  camera_parameters.yml  config.json  testBench_arUcoTag
cmake/: FindAprilTag.cmake  FindMqtt.cmake
images/aprilTag_img/: tag_to_svg.py
include/: aprilTag_model.cpp  aprilTag_model.hpp  arUco_model.cpp  arUco_model.hpp  camera_calibration.cpp  camera_calibration.hpp  ccTag_model.cpp  ccTag_model.hpp  globals.hpp  mqtt.cpp  mqtt.hpp  piTag_model.cpp  piTag_model.hpp  stag_model.cpp  stag_model.hpp
models/stag/: CMakeLists.txt
models/stag/src/: Drawer.cpp  Stag.cpp  Stag.h
samples/: aprilTag-test.cpp  aruco-test.cpp  pitag-test.cpp  stag-test.cpp
src/: main.cpp
